# Melon

./: CMakeLists.txt  README.md
src/: main.cpp
src/Commands/: ICommand.h
src/Commands/Init/: Init.cpp  Init.h
src/Commands/Init/projects/: Project.h  biosProject.h  uefiProject.h
src/Managers/ArgumentsManager/: ArgumentsManager.cpp  ArgumentsManager.h
src/Managers/OutputManager/: OutputManager.cpp  OutputManager.h
